[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/models/login/LoginHUD.gd" type="Script" id=2]
[ext_resource path="res://src/models/dao/sqlite/sqlite.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 54
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = ExtResource( 1 )

[node name="LoginHUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="InputContainer" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -301.5
margin_top = -81.0
margin_right = 301.5
margin_bottom = 81.0

[node name="Label" type="Label" parent="InputContainer"]
margin_right = 603.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 1 )
text = "Login up / Login in
"
align = 1

[node name="AccountContainer" type="GridContainer" parent="InputContainer"]
margin_top = 139.0
margin_right = 603.0
margin_bottom = 183.0
columns = 2

[node name="Label" type="Label" parent="InputContainer/AccountContainer"]
margin_right = 199.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
text = "   Account:"

[node name="AccountInput" type="LineEdit" parent="InputContainer/AccountContainer"]
margin_left = 203.0
margin_right = 603.0
margin_bottom = 44.0
rect_min_size = Vector2( 400, 0 )
custom_fonts/font = SubResource( 3 )
placeholder_text = "Unique account name"

[node name="PasswordContainer" type="GridContainer" parent="InputContainer"]
margin_top = 187.0
margin_right = 603.0
margin_bottom = 231.0
columns = 2

[node name="Label" type="Label" parent="InputContainer/PasswordContainer"]
margin_right = 198.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
text = "Password:"

[node name="PasswordInput" type="LineEdit" parent="InputContainer/PasswordContainer"]
margin_left = 202.0
margin_right = 602.0
margin_bottom = 44.0
rect_min_size = Vector2( 400, 0 )
custom_fonts/font = SubResource( 3 )
secret = true
placeholder_text = "Strong password"

[node name="PlaceHolder" type="Label" parent="InputContainer"]
margin_top = 235.0
margin_right = 603.0
margin_bottom = 249.0

[node name="GridContainer" type="GridContainer" parent="InputContainer"]
margin_top = 253.0
margin_right = 603.0
margin_bottom = 303.0
columns = 3

[node name="PlaceHolder" type="Label" parent="InputContainer/GridContainer"]
margin_top = 18.0
margin_right = 268.0
margin_bottom = 32.0
text = "                                                                   "

[node name="Button" type="Button" parent="InputContainer/GridContainer"]
margin_left = 272.0
margin_right = 385.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 4 )
text = "Enter"

[node name="PasswordConfirm" type="ConfirmationDialog" parent="."]
light_mask = 513
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -194.0
margin_top = 7.0
margin_right = 6.0
margin_bottom = 77.0
rect_scale = Vector2( 2, 2 )
window_title = "Ensure your password?"
dialog_autowrap = true

[node name="Sqlite" parent="." instance=ExtResource( 3 )]

[connection signal="button_down" from="InputContainer/GridContainer/Button" to="." method="_on_Button_button_down"]
[connection signal="confirmed" from="PasswordConfirm" to="." method="_on_PasswordConfirm_confirmed"]
